--- a/style.css
+++ b/style.css
@@ -7,6 +7,42 @@ html,
 body {
   margin: 0;
   padding: 0;
+  line-height: 1.2;
 }
 
 /* Add styles here! */
+.max-width-wrapper {
+  margin: 0 auto;
+  max-width: 65ch;
+}
+
+strong {
+  color : hsl(160 100% 30%)
+}
+
+main {
+  background-color: hsl(0, 0%, 60%);
+  border-top: 4px solid hsl(0, 0%, 40%);
+  padding: 4rem 0;
+}
+
+.intro-chunk {
+  padding: 5rem 1rem 3rem;
+  max-width: 35ch;
+}
+
+.card {
+  background-color: hsl(0 0% 100%);
+  padding: 1rem;
+  border-bottom: 4px solid hsl(0, 0%, 40%);
+
+}
+
+.indented-heading {
+  background-color: hsl(45 100% 50%);
+  border-bottom: 4px solid hsl(45 100% 30%);
+  margin-top: -0.5rem;
+  margin-left: -1.75rem;
+  padding: 0.5rem 1.5rem;
+  width: fit-content;
+}
