--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ strong {
 }
 
 main {
-  background-color: hsl(0, 0%, 60%);
-  border-top: 4px solid hsl(0, 0%, 40%);
+  background-color: hsl(0 0% 60%);
+  border-top: 4px solid hsl(0 0% 40%);
   padding: 4rem 0;
 }
 
@@ -34,15 +34,15 @@ main {
 .card {
   background-color: hsl(0 0% 100%);
   padding: 1rem;
-  border-bottom: 4px solid hsl(0, 0%, 40%);
+  border-bottom: 4px solid hsl(0 0% 40%);
 
 }
 
 .indented-heading {
   background-color: hsl(45 100% 50%);
-  border-bottom: 4px solid hsl(45 100% 30%);
+  border-bottom: 4px solid hsl(45 100% 40%);
   margin-top: -0.5rem;
   margin-left: -1.75rem;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 1.75rem;
   width: fit-content;
 }
